<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- URLs -->
    <string name="STREAM_URL_RADIO">https://relay0.r-a-d.io/main.mp3</string>
    <string name="STREAM_URL_TSUMUGI">https://azuracast.mahoro-net.org/listen/tsumugi/radio.mp3</string>
    <string name="STREAM_URL_RSTLSS">http://stream.radiosolution.fr/rstlss.mp3</string>
    <string name="github_url_new_issue">https://github.com/yattoz/Tsumugi-app/issues/</string>
    <string name="website_url">https://tsumugi.forum-thalie.fr/</string>
    <string name="rss_url">https://tsumugi.forum-thalie.fr/?feed=rss2</string>
    <string name="API_URL">https://azuracast.mahoro-net.org/api/nowplaying_static/tsumugi.json</string>
    <string name="planning_url">ADD SOME URL HERE</string>


    <string name="app_name">Tsumugi</string>
    <string name="title_nowplaying">Tsumugi</string>
    <string name="title_queue_lp">Songs</string>
    <string name="title_chat">Chat</string>
    <string name="title_news">News</string>
    <string name="title_programme">Planning</string>

    <string name="now_playing_notification_title_template">Now playing: %1$s</string>

    <string name="MEDIA_ROOT_ID">radio_root_id</string>


    <string name="volume">Volume: </string>

    <string name="up_next">Up next :</string>
    <string name="current_programme">Current programme : </string>
    <string name="now_streaming">Now streaming</string>
    <string name="error_webView">Error loading WebView. Try downloading Google Chrome on Google Play, or enabling it if you disabled it.</string>
    <string name="action_settings">Settings</string>
    <string name="action_bug_submit">Submit a bug (GitHub)</string>

    <string name="nowPlayingNotificationChannel">Tsumugi Stream Service</string>
    <string name="nowPlayingChannelId">fr.forum_thalie.tsumugi.PLAYER_SERVICE</string>

    <string name="snackbarPersistent">Stay visible, can be closed with \"OK\" button</string>
    <string name="snackbarNonPersistent">Disappear after some time</string>
    <string name="every_day">Every day</string>
    <string name="working_days">Working days</string>
    <string name="song_to_clipboard">Song copied to clipboard!</string>
    <string name="listeners">Listeners</string>
    <string name="r_a_dio_icon">r/a/dio icon</string>
    <string name="split_layout">Split Now Playing screen in 2 blocks when device is horizontal</string>
    <string name="not_split_layout">Keep the same layout when horizontal as in vertical</string>
    <string name="action_sleep">Sleep timer</string>
    <string name="dont_fetch_on_background">Disable</string>
    <string name="restart_the_app">You need to restart the app to apply the changes for this setting.</string>

    <string name="action_alarm">Alarm</string>
    <string name="sleep_fade_out_text">One minute before the end of the timer, the volume will gradually decrease.</string>
    <string name="disable">Disable</string>
    <string name="select_one_day">Select at least one day</string>
    <string name="no_alarm_set">No alarm set</string>
    <string name="next_alarm">Next alarm:</string>
    <string name="lp">Last played</string>
    <string name="programme">Planning</string>
    <string name="regular_programme">Programme régulier</string>
    <string name="useAlarmClock">Use as alarm clock</string>
    <string name="setTime">Set time</string>
    <string name="selectDaysOfWeek">Select days of the week</string>
    <string name="SetSnoozeDuration">Set snooze duration (minutes)</string>
    <string name="volumeAtStartup">Volume at startup</string>
    <string name="useHorizontalSplitLayout">Use horizontal split layout</string>
    <string name="makeSnackbarsPersistent">Make Snackbars persistent</string>
    <string name="setupAlarmClock">Alarm</string>
    <string name="setSleepTimer">Sleep timer</string>
    <string name="customizeAppBehavior">Customize app behavior</string>
    <string name="submitABug">Submit a bug (opens GitHub in a web browser)</string>
    <string name="sleepClosesApp">Sleep - close app after some time</string>
    <string name="setSleepDuration">Set duration (minutes)</string>
    <string name="willCloseIn">Will close in %1$d minutes</string>
    <string name="fetchPeriod">Set update period when stopped</string>
    <string name="refreshing">Refreshing data…</string>
    <string name="action_refresh">Refresh data</string>
    <string name="autoPlay">Auto play when plugging headphones</string>
    <string name="settings">Settings</string>
    <string name="test_alarm_volume">Test and change alarm volume</string>
    <string name="test_alarm_volume_summary">Touch this to listen to the alarm volume and set it up</string>
    <string name="popupTestAlarmVolume">The radio stream is now started in alarm mode. Adjust the volume with the volume buttons on your device. You can make a finer adjustment of the volume with the slider below.</string>
    <string name="finished">Done</string>
    <string name="alarmVolumeSeekBar">Adjust alarm volume</string>
    <string name="setupAlarmClockVolume">Set up alarm volume</string>
    <string name="alarm_volume">Alarm volume</string>

</resources>
