<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <SwitchPreferenceCompat
        app:key="isWakingUp"
        app:iconSpaceReserved="false"
        app:title="@string/useAlarmClock"
        app:singleLineTitle="false"
        app:defaultValue="false"
        />

    <Preference
        app:key="timeSet"
        app:iconSpaceReserved="false"
        app:title="@string/setTime"
        app:singleLineTitle="false"
        app:defaultValue="false"/>

    <MultiSelectListPreference
        app:key="alarmDays"
        app:iconSpaceReserved="false"
        app:title="@string/selectDaysOfWeek"
        app:singleLineTitle="false"

        />

    <ListPreference
        app:key="snoozeDuration"
        app:iconSpaceReserved="false"
        android:title="@string/SetSnoozeDuration"
        app:singleLineTitle="false"
        android:entries="@array/snoozeValues"
        android:entryValues="@array/snoozeValues"
        android:defaultValue="10"
        android:summary="%s"
        />

    <Preference
        app:iconSpaceReserved="true"
        android:key="testAlarmVolume"
        android:title="@string/test_alarm_volume"
        android:summary="@string/test_alarm_volume_summary"
        app:icon="@drawable/ic_volume_high"
        app:fragment="fr.forum_thalie.tsumugi.preferences.AlarmAdjustVolumeFragment"
        />

</PreferenceScreen>