<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:icon="@drawable/ic_alarm"
        app:key="alarmScreen"
        app:title="@string/setupAlarmClock"
        app:fragment="fr.forum_thalie.tsumugi.preferences.AlarmFragment"
        />

    <Preference
        app:icon="@drawable/ic_av_timer"
        app:key="sleepScreen"
        app:title="@string/setSleepTimer"
        app:fragment="fr.forum_thalie.tsumugi.preferences.SleepFragment"
        />

    <Preference
        app:icon="@drawable/ic_customize"
        app:key="CustomizeFragment"
        app:title="@string/customizeAppBehavior"
        app:fragment="fr.forum_thalie.tsumugi.preferences.CustomizeFragment"
        />

    <Preference
        app:key="submitBug"
        app:title="@string/submitABug"
        app:icon="@drawable/ic_bug"
        />


</PreferenceScreen>
