<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="isSleeping"
        app:iconSpaceReserved="false"
        app:title="@string/sleepClosesApp"
        app:singleLineTitle="false"
        app:defaultValue="false"
        />

    <EditTextPreference
        app:key="sleepDuration"
        app:iconSpaceReserved="false"
        app:title="@string/setSleepDuration"
        app:singleLineTitle="false"
        app:defaultValue="15"
        />

    <Preference
        app:key="sleepFadeText"
        app:iconSpaceReserved="false"
        app:title=""
        android:selectable="false"
        android:persistent="false"
        app:summary="@string/sleep_fade_out_text"
        app:singleLineTitle="false"
        />

</PreferenceScreen>